--- a/client/src/styles/inicio.scss
+++ b/client/src/styles/inicio.scss
@@ -9,4 +9,38 @@
     color: rgba(0, 0, 0, 1);
 }
 
+body.dark-mode {
+    background-color: #121212;  /* Fondo oscuro */
+    color: #e0e0e0;  /* Color de texto claro */
+}
 
+body.dark-mode .navbar {
+    background-color: #333;  /* Navbar oscuro */
+}
+
+body.dark-mode .btn-light {
+    background-color: #424242;  /* Botones con fondo oscuro */
+    color: #ffffff;
+}
+
+body.dark-mode .btn-light:hover {
+    background-color: #616161;  /* Hover de botones */
+}
+
+body.dark-mode .card {
+    background-color: #2c2c2c;
+    color: white;
+}
+
+body.dark-mode .dropdown-menu {
+    background-color: #333;
+    color: white;
+}
+
+body.dark-mode .dropdown-item {
+    color: white;
+}
+
+body.dark-mode .dropdown-item:hover {
+    background-color: #444;
+}
